--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -43,9 +43,9 @@ body {
   display: grid;
   grid-gap: 10px;
   grid-template-areas:
-    "header header header"
+    "header "
     "aside main aside"
-    "footer footer footer";
+    "footer";
 }
 
 aside {
